# english-learning-assistant

./: .gitignore  App.xaml  App.xaml.cs  BUILD-INSTALLER.ps1  FRONTEND_COMPLETION_IMPLEMENTATION_PLAN.md  FRONTEND_UPGRADE_PLAN.md  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  PORTABILITY.md  README.es.md  README.md  SetupWindow.xaml  SetupWindow.xaml.cs  VocabularyWindow.xaml  VocabularyWindow.xaml.cs  WindowsLiveCaptionsReader.csproj  appsettings.json  english_learning_assistant.slnx  next.config.js  package.json  plan_evolucion_english_learning_assistant.md  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
.next/: app-build-manifest.json  build-manifest.json  react-loadable-manifest.json  trace
.playwright-mcp/: page-2026-07-21T00-36-15-672Z.yml  page-2026-07-21T00-37-02-362Z.yml  page-2026-07-21T00-37-20-509Z.yml  page-2026-07-21T00-37-30-393Z.yml  page-2026-07-21T00-41-20-392Z.yml  page-2026-07-21T00-41-44-382Z.yml  page-2026-07-21T00-41-56-857Z.yml  page-2026-07-21T00-42-29-070Z.yml  page-2026-07-21T02-36-07-496Z.yml
EnglishLearningAssistant.Core/: EnglishLearningAssistant.Core.csproj
Services/: AppLogger.cs  AudioCaptureService.cs  BrowserCaptureService.cs  CaptionPipeline.cs  LibreTranslateService.cs  LmStudioService.cs  QuestionDetectionService.cs  SessionService.cs  SystemAudioCaptureService.cs  WhisperService.cs
installer/: EnglishLearningAssistant.iss  INSTALAR.bat  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+102 files in other folders)
