[package]
name = "english-learning-assistant"
version = "2.0.0"
description = "AI-powered English learning assistant"
authors = ["Charlie Cardenas Toledo"]
edition = "2021"

[lib]
name = "english_learning_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tauri-dotnet-bridge-host = "0.8.0"
